# Python_projects

./: shortest_path_algorithm_fcc_6.py
Digital_Department_python/: files.py  (+13 more)
fastapi_projects/hotel/: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
fastapi_projects/hotel/app/: config.py  database.py  exceptions.py  main.py
fastapi_projects/hotel/app/bookings/: dao.py  models.py  router.py  schemas.py
fastapi_projects/hotel/app/csv_files/: router.py
fastapi_projects/hotel/app/dao/: base.py
fastapi_projects/hotel/app/hotels/: dao.py  models.py  router.py  schemas.py
fastapi_projects/hotel/app/hotels/rooms/: models.py
fastapi_projects/hotel/app/images/: router.py
fastapi_projects/hotel/app/migrations/: env.py
fastapi_projects/hotel/app/tasks/: celery.py  dao.py  email_templates.py  scheduled.py
fastapi_projects/hotel/app/tests/: conftest.py  mock_hotels.json
fastapi_projects/hotel/app/users/: auth.py  dependencies.py  router.py
fastapi_python/: alembic.ini  config.py  main.py  pyproject.toml
fastapi_python/auth/: auth.py  database.py  manager.py  schemas.py
fastapi_python/migrations/: env.py
fastapi_python/migrations/versions/: 2024-05-17-74a4540b3b33_initial.py  2024-05-18-2912b59730de_removed_date_because_cases_bugs.py  2024-05-18-2e23d82e18c7_added_operation.py  280b804d17d5_database_creation.py
fastapi_python/models/: models.py
fastapi_python/python_chat/: main.py
fastapi_python/python_chat/static/css/: style.css
fastapi_python/python_chat/templates/: index.html
fastapi_python/src/: config.py  database.py  main.py
fastapi_python/src/auth/: base_config.py  manager.py  models.py
fastapi_python/src/operations/: router.py  schemas.py
(+30 files in other folders)
